<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_PressureMonitor" Id="{c3d4e5f6-7a8b-9c0d-1e2f-3a4b5c6d7e8f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_PressureMonitor
VAR_IN_OUT
	fbSensors : ARRAY[1..GVL.pressureSensorCount] OF ST_PressureSensor;
END_VAR

VAR
	fbScale : ARRAY[1..GVL.pressureSensorCount] OF FB_ScaleAnalog;
	i : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR i := 1 TO GVL.pressureSensorCount DO
	fbScale[i](
		fbRawValue := fbSensors[i].RawValue,
		fbInputMin := fbSensors[i].InputMin,
		fbInputMax := fbSensors[i].InputMax,
		fbOutputMin := fbSensors[i].OutputMin,
		fbOutputMax := fbSensors[i].OutputMax,
		fbScaledValue => fbSensors[i].ScaledValue,
		fbRangeError => fbSensors[i].RangeError);
END_FOR]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>
